@@ -52,7 +52,7 @@ Lists the methods available in this program
 
 =head1 VERSION
 
-This documents version v0.1.$Rev: 21 $ of C<mcp-worker>
+This documents version v0.1.$Rev: 24 $ of C<mcp-worker>
 
 =head1 DESCRIPTION
 
