@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Authen::HTTP::Signature" => "0.03";
 requires "Class::Usul" => "v0.51.0";
 requires "Crypt::SRP" => "0.013";
