@@ -2,20 +2,20 @@ package App::MCP::Worker::Role::ClientAuth;
 
 use namespace::autoclean;
 
-use Authen::HTTP::Signature;
 use Class::Usul::Constants qw( EXCEPTION_CLASS NUL );
+use HTTP::Request::Common  qw( GET POST );
+use Class::Usul::Types     qw( NonEmptySimpleStr Object );
 use Class::Usul::Functions qw( base64_decode_ns base64_encode_ns
                                class2appdir is_hashref throw );
-use Class::Usul::Types     qw( NonEmptySimpleStr Object );
-use Crypt::SRP;
 use Digest                 qw( );
 use Digest::MD5            qw( md5_hex );
-use HTTP::Request::Common  qw( GET POST );
 use JSON::MaybeXS          qw( );
+use Unexpected::Functions  qw( Unspecified );
+use Authen::HTTP::Signature;
+use Crypt::SRP;
 use LWP::UserAgent;
 use Sys::Hostname;
 use Try::Tiny;
-use Unexpected::Functions  qw( Unspecified );
 use Moo::Role;
 use Class::Usul::Options;
 
@@ -43,79 +43,37 @@ has '_user_agent'  => is => 'lazy', isa => Object,
 # Package variables
 my $private_key_cache = {};
 
-# Private methods
-my $_compute_token = sub {
-   my ($self, $username, $password, $res) = @_; my $content = $res->content;
-
-   $res->is_success
-      or throw 'User [_1] authentication failure code [_2]: [_3]',
-               [ $username, $res->code, $content->{message} ];
-
-   my $server_pub_key = base64_decode_ns( $content->{public_key} );
-
-   $self->log->debug( 'Auth server pub key '.(md5_hex $server_pub_key ) );
-   $self->log->debug( 'Client init '.(md5_hex $username.$content->{salt} ) );
-
-   $self->srp->client_verify_B( $server_pub_key )
-      or throw 'User [_1] server public key verification failure',
-               [ $username ];
-
-   $self->srp->client_init( $username, $password, $content->{salt} );
-
-   my $token = $self->srp->client_compute_M1;
-
-   $self->log->debug( 'Auth M1 token '.(md5_hex $token) );
-   return base64_encode_ns $token;
-};
-
-my $_decoded_response_to_signed_request = sub {
-   my ($self, $req) = @_; my $res = $self->user_agent->request( $req );
-
-   try   { $res->content( $self->transcoder->decode( $res->content ) ) }
-   catch { $res->content( { message => $res->content } ) };
-
-   return $res;
-};
-
-my $_read_private_key = sub {
-   my $self    = shift;
-   my $key     = $private_key_cache->{ $self->key_id }; $key and return $key;
-   my $ssh_dir = $self->config->my_home->catdir( '.ssh' );
-
-   return $private_key_cache->{ $self->key_id }
-        = $ssh_dir->catfile( $self->key_id.'.priv' )->all;
-};
-
 # Public methods
 sub authenticate_session {
-   my ($self, $uri, $opts) = @_; $opts //= {};
+   my ($self, $uri, $opts) = @_;
 
-   $uri or throw Unspecified, [ 'uri' ];
-   $opts->{template} or throw Unspecified, [ 'template' ];
+   $opts //= {};
+   throw Unspecified, ['uri'] unless $uri;
+   throw Unspecified, ['template'] unless $opts->{template};
 
    my $username = $opts->{user_name} // $self->user_name;
-   my $password = $opts->{password } // $self->get_user_password( $username );
-   my $raw_key  = ($self->srp->client_compute_A)[ 0 ];
+   my $password = $opts->{password } // $self->get_user_password($username);
+   my $raw_key  = ($self->srp->client_compute_A)[0];
 
-   $self->log->debug( 'Auth pubic key '.(md5_hex $raw_key) );
-   $uri .= sprintf $opts->{template}, $username;
+   $self->log->debug('Auth pubic key ' . (md5_hex $raw_key));
 
+   my $keys_uri = $uri . sprintf $opts->{template}->{exchange_keys}, $username;
    my $pub_key  = base64_encode_ns $raw_key;
-   my $res      = $self->get_with_sig( $uri, { public_key => $pub_key } );
-   my $token    = $self->$_compute_token( $username, $password, $res );
+   my $res      = $self->get_with_sig($keys_uri, { public_key => $pub_key });
+   my $token    = $self->_compute_token($username, $password, $res);
+   my $auth_uri = $uri . sprintf $opts->{template}->{authenticate}, $username;
 
-   $res = $self->post_as_json( $uri, { M1_token => $token } );
+   $res = $self->post_as_json($auth_uri, { M1_token => $token });
 
    my $content  = $res->content;
 
-   $res->is_success
-      or throw 'User [_1] authentication failure code [_2]: [_3]',
-               [ $username, $res->code, $content->{message} ];
+   throw 'User [_1] authentication failure code [_2]: [_3]',
+      [$username, $res->code, $content->{message}] unless $res->is_success;
 
-   $self->srp->client_verify_M2( base64_decode_ns $content->{M2_token} )
-      or throw 'User [_1] M2 token verification failure', [ $username ];
+   throw 'User [_1] M2 token verification failure', [$username]
+      unless $self->srp->client_verify_M2(base64_decode_ns $content->{M2_token});
 
-   $self->log->debug( "User ${username} Session-Id ".$content->{id} );
+   $self->log->debug("User ${username} Session-Id " . $content->{id});
 
    my $shared_secret = base64_encode_ns $self->srp->get_secret_K;
 
@@ -123,35 +81,94 @@ sub authenticate_session {
 }
 
 sub get_with_sig {
-   my ($self, $uri, $content) = @_; my $query = NUL;
+   my ($self, $uri, $content) = @_;
+
+   my $query = NUL;
 
    # TODO: If $uri was_a URI::http[s] then we can use query_form
    for (keys %{ $content // {} }) {
       $query .= $query ? '&' : '?'; $query .= "${_}=".$content->{ $_ };
    }
 
-   my $req    = GET $uri.$query; $req->protocol( 'HTTP/1.1' );
-   my $key    = $self->$_read_private_key;
-   my $signer = Authen::HTTP::Signature->new
-      ( headers => [ 'request-line' ], key => $key, key_id => hostname, );
+   my $req = GET $uri . $query;
 
-   return $self->$_decoded_response_to_signed_request( $signer->sign( $req ) );
+   $req->protocol('HTTP/1.1');
+
+   my $key = $self->_read_private_key;
+   my $signer = Authen::HTTP::Signature->new(
+      headers => ['request-line'], key => $key, key_id => hostname
+   );
+
+   return $self->_decoded_response_to_signed_request($signer->sign($req));
 }
 
 sub post_as_json {
-   my ($self, $uri, $content) = @_; my $digest = Digest->new( 'SHA-512' );
+   my ($self, $uri, $content) = @_;
 
-   $content   = $self->transcoder->encode( $content ); $digest->add( $content );
+   my $digest = Digest->new('SHA-512');
 
-   my $req    = POST $uri, 'Content-SHA512' => $digest->hexdigest,
-                           'Content-Type'   => 'application/json',
-                           'Content'        => $content;
-   my $key    = $self->$_read_private_key;
+   $content = $self->transcoder->encode($content);
+   $digest->add($content);
+
+   my $req = POST $uri,
+      'Content-SHA512' => $digest->hexdigest,
+      'Content-Type'   => 'application/json',
+      'Content'        => $content;
+   my $key = $self->_read_private_key;
    # TODO: Why doest hmac-sha512 not work?
-   my $signer = Authen::HTTP::Signature->new
-      ( headers => [ 'Content-SHA512' ], key => $key, key_id => hostname, );
+   my $signer = Authen::HTTP::Signature->new(
+      headers => ['Content-SHA512'], key => $key, key_id => hostname
+   );
 
-   return $self->$_decoded_response_to_signed_request( $signer->sign( $req ) );
+   return $self->_decoded_response_to_signed_request($signer->sign($req));
+}
+
+# Private methods
+sub _compute_token {
+   my ($self, $username, $password, $res) = @_;
+
+   my $content = $res->content;
+
+   throw 'User [_1] authentication failure code [_2]: [_3]',
+      [$username, $res->code, $content->{message}] unless $res->is_success;
+
+   my $server_pub_key = base64_decode_ns($content->{public_key});
+
+   $self->log->debug('Auth server pub key ' . (md5_hex $server_pub_key));
+   $self->log->debug('Client init ' . (md5_hex $username.$content->{salt}));
+
+   throw 'User [_1] server public key verification failure', [$username]
+      unless $self->srp->client_verify_B($server_pub_key);
+
+   $self->srp->client_init($username, $password, $content->{salt});
+
+   my $token = $self->srp->client_compute_M1;
+
+   $self->log->debug('Auth M1 token ' . (md5_hex $token));
+   return base64_encode_ns $token;
+}
+
+sub _decoded_response_to_signed_request {
+   my ($self, $req) = @_;
+
+   my $res = $self->user_agent->request($req);
+
+   try   { $res->content($self->transcoder->decode($res->content)) }
+   catch { $res->content({ message => $res->content }) };
+
+   return $res;
+}
+
+sub _read_private_key {
+   my $self = shift;
+   my $key  = $private_key_cache->{$self->key_id};
+
+   return $key if $key;
+
+   my $ssh_dir = $self->config->my_home->catdir('.ssh');
+
+   return $private_key_cache->{$self->key_id}
+        = $ssh_dir->catfile($self->key_id . '.priv')->all;
 }
 
 1;
